src/style.css
body {
  margin: 60px;
  font-family: "Yantramanav", sans-serif;
}

div.card.capsule {
  color: #f2f2f1;
  margin: 0 auto;
  min-width: 540px;
  max-width: 700px;
  background-image: linear-gradient(to top, #f2f2f1, #4dd1e2, #15a3b8);

  background-blend-mode: normal, color-burn;
  box-shadow: 5px 5px 10px rgba(21, 163, 184, 0.3);
}
h1 {
  line-height: 27px;
  display: inline-block;
}

h2,
h3 {
  display: inline-block;
}
h2 {
  color: #f2f2f1;
  margin-top: 61px;
  font-size: 50;
  font-weight: 400;
  line-height: 35px;
}
h3 {
  font-size: 15px;
  color: rgb(72, 72, 75);
}

h5 {
  color: #f2f2f1;

  font-size: 20px;
  font-weight: 400;
  text-align: center;
  height: 15px;
  line-height: 15px;
  padding-top: 7px;
}
p {
  color: #f2f2f1;
  margin-top: 85px;
}
small {
  font-size: 15px;
  color: rgb(33, 33, 33);
  display: block;
  text-align: center;
  margin-top: 10px;
}

.weather-app-wrapper {
  max-width: 600px;
  margin: 30px auto;
}
.card {
  border-radius: 22px;
  border: 0.5px solid rgba(21, 163, 184, 0.125);
}
.search-button,
.city-input {
  background-color: #cbf1f6;
  border-color: #139bad;
  border-radius: 3px;
  box-shadow: 5px 5px 9px rgba(242, 242, 241, 0.3);
  border: 0.8px solid rgba(21, 163, 184, 0.125);
}
.search-button {
  transition: all 300ms ease;
}
.search-button:hover {
  background-color: #dbfbff;
}
.search-city-current-location {
  float: right;
}
.current-location-button {
  background: transparent;
  color: rgb(72, 72, 75);

  border-style: none;
  float: center;
  transition: all 300ms ease;
}
.current-location-button:hover {
  color: rgb(34, 38, 42);
}

.current-conditions {
  margin: 25px 5px 35px 5px;
  text-align: center;
}

.condition-description {
  font-size: 28px;
  font-weight: 400;
}
.condition-description:first-letter {
  text-transform: capitalize;
}
.last-update {
  font-size: 15px;
}
.temp-high-low-today {
  font-size: 20px;
  font-weight: 400;
}
.week-ahead {
  background: linear-gradient(to top, #f2f2f1, #4dd1e2, #15a3b8);
  background-blend-mode: normal, color-burn;
  text-align: center;

  box-shadow: 5px 5px 10px rgba(21, 163, 184, 0.3);
}
.weather-forcast {
  display: inline-flex;
}
.weather-forecast img {
  display: block;
  margin: 0 auto;
  height: 48px;
  width: 48px;
}
.temp-high-low-future {
  text-align: center;
  color: rgb(135, 135, 135);
  font-size: 15px;
  font-weight: 400;
  height: auto;
  line-height: 15px;
  white-space: nowrap;
}

.btn-group {
  float: right;
  margin: 10px 20px;
  box-shadow: 5px 5px 10px rgba(21, 163, 184, 0.3);
  border-radius: 3px;
}

.btn-group .active:hover {
  cursor: default;
}

